test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/missing_parameter_list.plx
# Functions must have parameter lists
pub fn f i32 {
    return 0
}

pub fn main(none) i32 {
    return 0
}
